<resources>
    <string name="app_name">Thermostat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unitedKingdom">United Kingdom</string>
    <string name="germany">Germany</string>
    <string name="theNetherlands">The Netherlands</string>
    <string name="searchHouse">Search for a house…</string>
    <string name="startTemp">10°</string>
    <string name="actual_temperature">Actual Temp: </string>
    <string name="submit">Submit</string>
    <string name="logo">SBP</string>
    <string name="welcome">Hello and welcome</string>
    <string name="desired">Desired Temp:</string>
    <string name="desiredTemp">15 °C</string>
    <string name="actualTemp">14 °C</string>
</resources>