<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <com.marcinmoskala.arcseekbar.ArcSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        app:maxProgress="14"
        app:progressBackgroundColor="@color/grey"
        app:progressBackgroundWidth="20dp"
        app:progressWidth="20dp"
        app:thumb="@drawable/white_thumb" />

    <TextView
        android:id="@+id/tvSetTemp"
        style="@style/defaultText"
        android:text="@string/startTemp"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/tvActualTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/actual_temperature"
        android:textSize="@dimen/mediumText"
        app:layout_constraintEnd_toStartOf="@+id/tvDesiredTemp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/btnSetTemp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/send"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetTemp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvDesiredTemp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/desired"
        android:textSize="@dimen/mediumText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvActualTemp"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <View
        android:id="@+id/divider"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/numActualTemp"
        app:layout_constraintEnd_toStartOf="@+id/tvDesiredTemp"
        app:layout_constraintStart_toEndOf="@+id/tvActualTemp"
        app:layout_constraintTop_toTopOf="@+id/tvActualTemp" />

    <TextView
        android:id="@+id/numActualTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/actualTemp"
        android:textSize="@dimen/mediumText"
        app:layout_constraintEnd_toEndOf="@+id/tvActualTemp"
        app:layout_constraintStart_toStartOf="@+id/tvActualTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvActualTemp"
         />

    <TextView
        android:id="@+id/numDesiredTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/desiredTemp"
        android:textSize="@dimen/mediumText"
        app:layout_constraintEnd_toEndOf="@+id/tvDesiredTemp"
        app:layout_constraintStart_toStartOf="@+id/tvDesiredTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvDesiredTemp"
         />


</androidx.constraintlayout.widget.ConstraintLayout>

